@@ -1,4 +1,5 @@
-// DataInitializer.java
+package lp.jobify.config;
+
 import lp.jobify.model.Candidato;
 import lp.jobify.model.Recrutador;
 import lp.jobify.model.Vaga;
@@ -10,7 +11,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.time.LocalDate;
 import java.util.List;
 
 @Component
@@ -26,30 +27,29 @@ public class DataInitializer implements CommandLineRunner {
 
     @Override
     public void run(String... args) {
-        // Verificar se já existem dados
         if (candidatoRepository.count() == 0 && recrutadorRepository.count() == 0 && vagaRepository.count() == 0) {
 
-            List<Candidato> candidatos = Arrays.asList(
+            List<Candidato> candidatos = List.of(
                     new Candidato("João Silva", "joao.silva@email.com", "Java, Spring Boot, Microservices", "Desenvolvedor Java Sênior", "senha123"),
                     new Candidato("Maria Souza", "maria.souza@email.com", "Python, Machine Learning, Data Analysis", "Cientista de Dados", "senha456"),
                     new Candidato("Pedro Santos", "pedro.santos@email.com", "React, Angular, JavaScript", "Desenvolvedor Front-End", "senha789")
             );
             candidatoRepository.saveAll(candidatos);
 
-            List<Recrutador> recrutadores = Arrays.asList(
+            List<Recrutador> recrutadores = List.of(
                     new Recrutador("Empresa A", "recrutadorA@email.com", "Empresa A", "senhaABC"),
                     new Recrutador("Empresa B", "recrutadorB@email.com", "Empresa B", "senhaDEF"),
                     new Recrutador("Empresa C", "recrutadorC@email.com", "Empresa C", "senhaGHI")
             );
             recrutadorRepository.saveAll(recrutadores);
 
-            List<Vaga> vagas = Arrays.asList(
-                    new Vaga("Desenvolvedor(a) Java Back-end", "Experiência com Spring Boot e Microsserviços.  Desenvolvimento de APIs RESTful.", recrutadores.get(0), "São Paulo", "CLT", "Java, Spring Boot, Git"),
-                    new Vaga("Cientista de Dados Júnior", "Conhecimento em Python e bibliotecas de Machine Learning.  Análise de dados e visualização.", recrutadores.get(0), "Remoto", "PJ", "Python, Machine Learning, Pandas, Scikit-learn"),
-                    new Vaga("Desenvolvedor(a) Front-end React", "Domínio de React, Redux e outras bibliotecas.  Experiência com testes unitários e integração.", recrutadores.get(1), "Rio de Janeiro", "CLT", "React, Redux, JavaScript, HTML, CSS"),
-                    new Vaga("Estágio em Desenvolvimento Web", "Conhecimento básico em HTML, CSS e JavaScript.  Vontade de aprender e se desenvolver na área.", recrutadores.get(1), "São Paulo", "Estágio", "HTML, CSS, JavaScript"),
-                    new Vaga("Engenheiro(a) de Software Sênior", "Experiência com desenvolvimento em nuvem (AWS ou Azure).  Arquitetura de microsserviços e design patterns.", recrutadores.get(2), "Remoto", "CLT", "Java, Python, Cloud Computing, Microsserviços"),
-                    new Vaga("Analista de Dados Sênior", "Experiência com Big Data e ferramentas de análise de dados.  Conhecimento em estatística e modelagem.", recrutadores.get(2), "São Paulo", "PJ", "Python, R, Big Data, Hadoop, Spark")
+            List<Vaga> vagas = List.of(
+                    new Vaga("Desenvolvedor(a) Java Back-end", "Experiência com Spring Boot e Microsserviços. Desenvolvimento de APIs RESTful.", recrutadores.get(0), "São Paulo", LocalDate.now(), "CLT", null, null, List.of("Java", "Spring Boot", "Git")),
+                    new Vaga("Cientista de Dados Júnior", "Conhecimento em Python e bibliotecas de Machine Learning. Análise de dados e visualização.", recrutadores.get(0), "Remoto", LocalDate.now(), "PJ", null, null, List.of("Python", "Machine Learning", "Pandas", "Scikit-learn")),
+                    new Vaga("Desenvolvedor(a) Front-end React", "Domínio de React, Redux e outras bibliotecas. Experiência com testes unitários e integração.", recrutadores.get(1), "Rio de Janeiro", LocalDate.now(), "CLT", null, null, List.of("React", "Redux", "JavaScript", "HTML", "CSS")),
+                    new Vaga("Estágio em Desenvolvimento Web", "Conhecimento básico em HTML, CSS e JavaScript. Vontade de aprender e se desenvolver na área.", recrutadores.get(1), "São Paulo", LocalDate.now(), "Estágio", null, null, List.of("HTML", "CSS", "JavaScript")),
+                    new Vaga("Engenheiro(a) de Software Sênior", "Experiência com desenvolvimento em nuvem (AWS ou Azure). Arquitetura de microsserviços e design patterns.", recrutadores.get(2), "Remoto", LocalDate.now(), "CLT", null, null, List.of("Java", "Python", "Cloud Computing", "Microsserviços")),
+                    new Vaga("Analista de Dados Sênior", "Experiência com Big Data e ferramentas de análise de dados. Conhecimento em estatística e modelagem.", recrutadores.get(2), "São Paulo", LocalDate.now(), "PJ", null, null, List.of("Python", "R", "Big Data", "Hadoop", "Spark"))
             );
             vagaRepository.saveAll(vagas);
         }
